force-app/main/default/objects/Reference_Credit_Risk__c/Reference_Credit_Risk__c.object-meta.xml
<CustomObject>
    <description>Object to be used by Credit Risk Management for auditing and credit assessments</description>
    <label>Reference Credit Risk</label>
    <nameField>
        <displayFormat>Risk-{0000000}</displayFormat>
        <label>Risk Audit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Credit Risk</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>