force-app/main/default/objects/Reference_Credit_Risk__c/fields/Audit_Review_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Audit_Review_Complete_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Audit-Review Complete Date</label>
    <type>Date</type>
</CustomField>