force-app/main/default/objects/Reference_Credit_Risk__c/fields/Current_Step__c.field-meta.xml
<CustomField>
    <fullName>Current_Step__c</fullName>
    <label>Current Step</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Case Creation</fullName>
            </value>
            <value>
                <fullName>Audit/Review In Progress</fullName>
            </value>
            <value>
                <fullName>Credit Limit Needed</fullName>
            </value>
            <value>
                <fullName>Audit/Review Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>