force-app/main/default/objects/Reference_Credit_Risk__c/fields/Date_Established__c.field-meta.xml
<CustomField>
    <fullName>Date_Established__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date business was establised</inlineHelpText>
    <label>Date Established</label>
    <type>Date</type>
</CustomField>