force-app/main/default/objects/Reference_Credit_Risk__c/fields/Monitor_Client_Updated_by__c.field-meta.xml
<CustomField>
    <fullName>Monitor_Client_Updated_by__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Monitor Client Updated by</label>
    <length>50</length>
    <type>Text</type>
</CustomField>