force-app/main/default/objects/Reference_Credit_Risk__c/fields/NAICS_Code_OLD__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Code_OLD__c</fullName>
    <description>Created per BAU Case #28439640</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>North American Industry Classification System code for the business. Valid NAICS codes can be found at http://www.census.gov/eos/www/naics/</inlineHelpText>
    <label>NAICS Code_OLD</label>
    <length>6</length>
    <type>Text</type>
</CustomField>