force-app/main/default/objects/Reference_Credit_Risk__c/fields/Nbr_of_Non_Financial_Charge_Offs__c.field-meta.xml
<CustomField>
    <fullName>Nbr_of_Non_Financial_Charge_Offs__c</fullName>
    <label>Number of Non Financial Charge Offs</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Non_Financial_Chargeoffs__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5 +</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>