force-app/main/default/objects/Reference_Credit_Risk__c/fields/Secured_Funding_Updated_by__c.field-meta.xml
<CustomField>
    <fullName>Secured_Funding_Updated_by__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secured Funding Updated by</label>
    <length>50</length>
    <type>Text</type>
</CustomField>