force-app/main/default/objects/Reference_Credit_Risk__c/fields/Security_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Security_Deposit__c</fullName>
    <description>Created per BAU Case #28439640</description>
    <label>Security Deposit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>