force-app/main/default/objects/Reference_Credit_Risk__c/fields/Total_Financial_Balance_NLN__c.field-meta.xml
<CustomField>
    <fullName>Total_Financial_Balance_NLN__c</fullName>
    <description>Total current finanicial credit exposure</description>
    <inlineHelpText>Total current finanicial credit exposure</inlineHelpText>
    <label>Total Financial Balance_NLN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>