force-app/main/default/objects/Reference_Credit_Risk__c/recordTypes/Credit_Risk_Audit_Reference.recordType-meta.xml
<RecordType>
    <fullName>Credit_Risk_Audit_Reference</fullName>
    <active>true</active>
    <description>Record type Credit Risk Audits and Client Reviews</description>
    <label>Credit Risk Audit Reference</label>
</RecordType>