force-app/main/default/objects/Reference_Credit_Risk__c/validationRules/Prevent_CurrentStepComplete_CurrentRevie.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_CurrentStepComplete_CurrentRevie</fullName>
    <active>true</active>
    <description>The Current Step field can only be set to Audit/Review Complete if the Current Review status is a specific value.</description>
    <errorConditionFormula>AND( 
($RecordType.Name = &quot;Credit Risk Audit Reference&quot; ), 
( ISPICKVAL(Current_Step__c, &apos;Audit/Review Complete&apos;) ), 
( ISPICKVAL(Current_Review_Status__c, &apos;Requires Review&apos;) ), 
($Profile.Name &lt;&gt;&quot;System Administrator&quot;) 
)</errorConditionFormula>
    <errorDisplayField>Current_Step__c</errorDisplayField>
    <errorMessage>The Current Step field can only be set to Audit/Review Complete if the Current Review status is one of the following values: Decline, Approve with ACH or one of the Approve with Condition – *** values</errorMessage>
</ValidationRule>