force-app/main/default/objects/Reference_Credit_Risk__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Prospect_Client__c</columns>
    <columns>Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Current_Step__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>