force-app/main/default/objects/Reference_Credit_Risk__c/listViews/My_Reference_Credit_Risk.listView-meta.xml
<ListView>
    <fullName>My_Reference_Credit_Risk</fullName>
    <columns>NAME</columns>
    <columns>Prospect_Client__c</columns>
    <columns>Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Current_Step__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>My Reference Credit Risk</label>
</ListView>