force-app/main/default/objects/Reference_Credit_Risk__c/listViews/Risk_Credit_Limit_Needed_Queue.listView-meta.xml
<ListView>
    <fullName>Risk_Credit_Limit_Needed_Queue</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Prospect_Client__c</columns>
    <columns>Prospect_Client_Number__c</columns>
    <columns>Type__c</columns>
    <columns>Current_Step__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Reference_Credit_Risk__c.Credit_Risk_Audit_Reference</value>
    </filters>
    <filters>
        <field>Current_Step__c</field>
        <operation>notEqual</operation>
        <value>Audit/Review Complete</value>
    </filters>
    <label>Risk:Credit Limit Needed Queue</label>
    <queue>RiskCreditLimitNeededQueue</queue>
</ListView>